Trying to fix overlapping navbar links

--- a/assets/_sass/styles.sass
+++ b/assets/_sass/styles.sass
@@ -91,6 +91,10 @@ a
     overflow: hidden
     padding-left: 10px
     width: 0
+  .external-links
+    position: fixed
+    bottom: 0px
+    padding-bottom: 20px
 
 .btn-navbar
   cursor: pointer
@@ -589,6 +593,8 @@ a
     /*background-image: url(../img/landing.jpg);
 
 @media screen and (max-width: 480px)
+  #nav .external-links
+    padding-bottom: 0
   .section
     padding: 80px 0
   #section1
